css/sitestyle-dark.css
@import url("https://fonts.googleapis.com/css?family=Aldrich|Lato");
@font-face {
  font-family: PixelText;
  src: url(../fonts/code.ttf);
}

html, body, * {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: #ffffff;
}

#hero-home {
  background-image: url("../img/bg/Artboard 1@2x.png");
  background-color: #1B1B1B;
  background-size: cover;
  background-position: left top;
  background-origin: border-box;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  font-size: 3vw;
  text-align: center;
}

#hero-home header {
  font-family: "PixelText", monospace;
  background: linear-gradient(to right, rgba(255, 237, 236, 0.86), rgba(247, 208, 208, 0.87));
  border: 0.1em #ECE9E6 solid;
  padding: 0 5vw;
  color: #ff0900;
  margin-bottom: 4vh;
  position: relative;
  width: 70vw;
  bottom: 15%;
  line-height: 3.5em;
  text-shadow: 3px 3px 0 rgba(245, 42, 42, 0.15);
}

#hero-home h2 {
  font-size: 1em;
}

#start-button {
  border-radius: 0.5em;
  height: 15vh;
  width: 40vw;
  font-family: "PixelText", monospace;
  font-size: 4vw;
  color: #ffffff;
  border: 0;
  box-shadow: 0px 4px 5px 1px rgba(245, 42, 42, 0.15);
  background: radial-gradient(ellipse farthest-corner at 45px 45px, #ff4e44 0%, #F00000 100%);
  transition: box-shadow 0.5s, background 0.15s, transform 0.5s;
  cursor: pointer;
  outline: 0;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 4vh;
}

.typed-cursor {
  opacity: 0;
  padding-left: 0.1em;
  border-right: solid 0.05em #380704;
  /*height*/
  -webkit-animation: blink 0.7s 5;
  -moz-animation: blink 0.7s 5;
  animation: blink 0.7s 5;
}

@keyframes blink {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes blink {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-moz-keyframes blink {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

#start-button:hover {
  box-shadow: 0px 5px 0px #821812;
  transform: rotateX(30deg);
}

#start-button:hover:active {
  text-shadow: 0 0 4px rgba(255, 255, 255, 0.15);
  box-shadow: 0 1px 0 rgba(245, 42, 42, 0.15);
  background: radial-gradient(ellipse at center, #e64f47 5%, #ff7171 100%);
}

#main {
  background: #D2DFF8;
  background: linear-gradient(270deg, #232526 0%, #414345 100%);
  /* w3c */
}

#main {
  display: flex;
  flex-direction: column;
}


/*#mid {
  padding: 1em 0 1em 2em; }*/

.sidebar {
  height: 10vh;
  background: -webkit-radial-gradient(ellipse, #ff0900, #e73827);
  background: -moz-radial-gradient(ellipse, #ff0900, #e73827);
  background: -o-radial-gradient(ellipse, #ff0900, #e73827);
  background: radial-gradient(ellipse farthest-corner, #ff0900, #e73827);
  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  /*padding: 2rem 0 2rem 2rem;*/
  border-bottom: 0.5vmin solid #ECE9E6;
  display: flex;
  /*font-size: 90%;
  text-align: center; */
}


/*#sidebar-menu li {
  list-style: none; }*/


/*#sidebar-menu img {
  margin: 1em 1em;
  width: 60%; }*/

article p {
  color: #380704;
  font-family: "Lato", sans-serif;
}

.unord-list {
  display: flex;
  justify-content: space-evenly;
  flex-grow: 2;
  align-items: center;
}

.sidebar div {
  font-family: "Aldrich", monospace;
  font-size: 1.17em;
  line-height: 4em;
  cursor: pointer;
  color: #ffffff;
  transition: border 250ms ease-in-out;
}

.sidebar div.list-item {
  width: 80%;
  height: 100%;
  text-align: center;
}

.list-item:first-child {
  margin-left: 0 !important;
}

.sidebar div.list-item:hover {
  background: #ea5955;
  border-top: 1px #ECE9E6 solid;
  border-bottom: 1px #ECE9E6 solid;
}

.page-section {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  padding-top: 5vh;
  height: 100vh;
}

.page-section.about-me {
  background-color: #e30800;
  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
}

.about-me article {
  margin: 5vh 10vw;
  background: white;
  box-shadow: 18px 20px rgba(53, 44, 44, 0.85);
  padding: 1em 2em 2em 2em;
  max-height: 75vh;
  line-height: 1.5;
  font-size: 2.5vmin;
  /*overflow: overlay;*/
}

#about-me-pic img {
  background: white;
  box-shadow: 18px 20px rgba(53, 44, 44, 0.85);
  /*width: 25vw;*/
  height: 25vh;
  margin-top: 10vh;
  margin-bottom: 5vh;
}

.page-section#projects-dest {
  background-color: #140100;
  background-image: url(https://www.transparenttextures.com/patterns/back-pattern.png);
}

#projects h4 {
  font-family: "Aldrich", monospace;
}

#projects {
  /*margin: 5vh 0 5vh 2vw;*/
  background: white;
  box-shadow: 18px 20px rgba(245, 42, 42, 0.85);
  padding: 1em 2em;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
  width: 75vw;
}

.gallery-entry {
  padding: 1em;
  transition: background-color 350ms;
  cursor: pointer;
}

#project-gallery {
  /*background: #90B6F7;*/
  padding: 1rem 2em;
  width: 20vw;
  height: 70vh;
  max-height: 90vh;
  /*overflow: auto;*/
  font-size: 1vw;
  /*width: 100%;*/
  /*height: 295px;*/
  overflow-y: scroll;
}

#project-expanded {
  /*background: rgba(228, 149, 149, 0.5);*/
  /*border: 0.15rem double;
  border-color: #e30800;
  border-radius: 0.5em;
  transition: border 750ms ease-in-out;*/
  padding: 1rem 2em;
  font-size: 2vmin;
  line-height: 1.5;
  width: 50vw;
  height: 70vh;
  margin-left: 2em;
  /*margin: auto auto auto 1em;*/
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: scroll;
}

#project-expanded .slick-list draggable {
  width: inherit;
  height: inherit;
}

#project-gallery .slick-list draggable {
  width: inherit;
  height: 90%;
}

#project-gallery .slick-track {
  transform: translate3d(0px, 0px, 0px);
}

.project-screens {
  margin-bottom: 2em;
}

.project-info {
  /*overflow-y: scroll;*/
  height: 30vh;
}

.page-section#contact-dest {
  background-color: #e30800;
  background-image: url(https://www.transparenttextures.com/patterns/carbon-fibre-v2.png);
}

#contact-info {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-gap: 0.5vmax 2vmax;
  grid-template-areas: "bye bye" "linkA linkB" "linkC linkD";
  background: white;
  box-shadow: 18px 20px rgba(53, 44, 44, 0.85);
  width: 70vw;
  min-height: 30vh;
  padding: 5%;
  /*justify-items: center;*/
  align-items: center;
  margin-bottom: 5vh;
  /*display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;  */
}

.contact-entry {
  padding: 1em;
  text-align: center;
  border-width: 0.4vmin 0 0.4vmin 0;
  border-color: #3e0909;
  border-style: dotted;
}

#email {
  grid-area: linkA;
}

#linkedin {
  grid-area: linkB;
}

#github {
  grid-area: linkC;
}

#resume {
  grid-area: linkD;
}

#self-end {
  font-size: 2.5vmin;
  text-align: center;
  grid-area: bye;
}


/*#contact-container {
    width: 50vw;
}

.contact-entry {
    display: inline-block;
}
*/

#github, #resume {
  margin-top: 5%;
}

#contact-info span {
  font-family: "Lato", sans-serif;
  color: #380704;
  margin-left: 0.3em;
  /*font-size:*/
}

.scroll-bar-wrap#scroll-small {
  /*width: 300px;*/
  position: relative;
  /*margin: 2em auto;*/
}

.scroll-bar-wrap#scroll-expanded {
  /*width: 300px;*/
  position: relative;
  /*margin: 2em auto;*/
}


/*.project-entry {
    transition: all 2s;
}*/


/*.project-entry.active {
    opacity: 0;
}*/

.gallery-entry.active {
  background-color: #ff3c36;
  background-image: url(https://www.transparenttextures.com/patterns/checkered-pattern.png);
}

.gallery-entry {
  color: #380704;
  height: 90%;
}

#project-gallery::-webkit-scrollbar {
  width: .4em;
}

#project-gallery::-webkit-scrollbar, #project-gallery::-webkit-scrollbar-thumb {
  overflow: visible;
  border-radius: 4px;
}

#project-gallery::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.2);
}

#project-expanded::-webkit-scrollbar {
  width: .4em;
}

#project-expanded::-webkit-scrollbar, #project-expanded::-webkit-scrollbar-thumb {
  overflow: visible;
  border-radius: 4px;
}

#project-expanded::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.2);
}


/*.cover-bar {
  position: absolute;
  background: #90B6F7;
  height: 100%;  
  top: 0;
  right: 0;
  width: .4em;
  -webkit-transition: all .5s;
  opacity: 1;
}*/


/* MAGIC HAPPENS HERE */

.scroll-bar-wrap:hover .cover-bar {
  opacity: 0;
  -webkit-transition: all .5s;
  transition: all .5s;
}


/*.project-entry.inactive {
    display: none;
}*/

@media (max-width: 780px) {
  #hero-home {
    justify-content: center;
  }
  #hero-home header {
    width: 75vw;
  }
  #start-button {
    height: 10vh;
  }
  .sidebar {
    display: none;
  }
  #mid {
    padding: 0;
  }
  .page-section {
    max-height: 150vh;
    height: auto;
    padding: 4vmin;
    max-width: 100vw;
    justify-content: flex-start;
  }
  .about-me article {
    max-height: initial;
    padding: 5vmin;
  }
  #projects {
    height: auto;
    box-shadow: 6px 8px rgba(245, 42, 42, 0.85);
    width: 70vw;
  }
  #project-expanded {
    display: none;
  }
  #project-gallery {
    display: grid;
    width: 100%;
    grid-template: auto / 1fr 1fr;
    grid-gap: 2vmin;
    height: auto;
  }
  .gallery-entry {
    font-size: 2vw;
  }
  .gallery-entry.inactive {
    border: 1em outset white;
  }
  .gallery-entry:active {
    border: 1em inset #c31d1d;
  }
  .swiper-container {
    width: 75vw;
  }
  #contact-info {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: fit-content(50%);
    grid-template-areas: initial;
    grid-gap: 1vw;
    line-height: 2em;
    height: auto;
    max-width: 90vw;
    padding: 1em;
  }
  #email, #linkedin, #github, #resume {
    grid-area: none;
    grid-row: auto;
    border-width: 0.4vmin 0 0 0;
    border-color: #c31d1d;
    border-style: dotted;
  }
  #self-end {
    text-align: center;
    grid-area: none;
    grid-row: 1;
  }
}


/*# sourceMappingURL=sitestyle-dark.css.map */

